<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  
	<LinearLayout android:layout_width="match_parent"
      				android:layout_height="wrap_content"
      				android:layout_marginTop="10dp">
		<ImageButton android:id="@+id/btnTakeContactPicture"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:src="@android:drawable/ic_menu_camera" />
		<ImageView android:id="@+id/imgContactPhoto"
		    			android:layout_width="80dp"
		    			android:layout_height="80dp"
		    			android:scaleType="centerInside"
		    			android:background="@android:color/darker_gray"
		    			android:cropToPadding="true" />
	</LinearLayout>
    
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_name_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/txtFirstName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/first_name_hint"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/last_name_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/txtLastName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/last_name_hint"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/age_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/txtAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/age_hint"
    android:inputType="numberSigned"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/phone_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/txtPhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/phone_hint"
    android:inputType="phone"
    />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/email_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/txtEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/email_hint"
    android:inputType="textEmailAddress"
    />
  
</LinearLayout>